# functional-data-structures

./: .envrc  .gitignore  CLAUDE.md  LICENSE  Makefile  README.org  functional-data-structures.el  okasaki-data-structures.org  pyproject.toml
.emacs.d/: init.el
hy/: okasaki.hy
hy/okasaki/: __init__.hy  stack.hy.bak
scheme/: okasaki.scm
scheme/okasaki/: stack.scm
tests/: conftest.py
tests/hy/: test_basic.py  test_stack.hy
tests/scheme/: test-runner.scm  test-stack.scm
tests/unit/hy/: __init__.py  test_basic.hy
