[project]
name = "functional-data-structures"
version = "0.1.0"
description = "Purely functional data structures implemented in Scheme and Hy"
authors = [
    {name = "Functional Data Structures Team"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "hy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "test_*.hy"]
testpaths = ["tests/hy"]
addopts = "--import-mode=append"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "dist",
    "build",
]