
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "functional-data-structures"
version = "0.1.0"
description = "Purely functional data structures implemented in Scheme and Hy"
authors = ["Functional Data Structures Team"]
readme = "README.org"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
hy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"
pytest = "^7.0.0"

[tool.pytest.ini_options]
python_files = ["test_*.py", "test_*.hy"]
testpaths = ["tests/hy"]
addopts = "--import-mode=append"
markers = [
    "hy: marks tests that use Hy"
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "dist",
    "build",
]